# ARCLID

./: README.md  pyproject.toml  requirements.txt
arclid/: cli.py
arclid/core/: model_loader.py  pipeline.py  postprocess.py  utils.py  workers.py
