

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arclid"
version = "1.0.0"
description = "ARCLID: Accurate and Robust Characterization of Long Insertions and Deletions"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [{ name = "Sajad Tavakoli" }]
keywords = ["genomics", "structural-variants", "long-read", "deep-learning", "yolo"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Topic :: Scientific/Engineering :: Bio-Informatics"
]

dependencies = [
  "torch>=2.0",
  "ultralytics>=8.0",
  "numpy",
  "opencv-python",
  "pysam",
]

[project.scripts]
arclid = "arclid.cli:main"

[tool.setuptools.package-data]
# include non-python files if needed (e.g., default configs)
arclid = ["py.typed"]

[tool.setuptools.packages.find]
where = ["."]
include = ["arclid*"]
